# YTSvrLib

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  YTSvrLib.sln  configure.sh  configure_clang.sh  configure_cmake.sh  findcpp.py  install-dependencies.sh  install_cmake.sh  install_depency.sh  linux.clang.toolchain.cmake  makeall.sh  makeall_auto.sh  makeall_auto_release.sh  makeall_clang.sh  makeall_clang_release.sh  makeall_release.sh  remakeall.sh  remakeall_auto.sh  remakeall_auto_release.sh  remakeall_clang.sh  remakeall_clang_release.sh  remakeall_release.sh
Sample/Sample/: Makefile.am  Sample.cpp  Sample.rc  Sample.vcxproj  Sample.vcxproj.filters  stdafx.h
Sample/Sample/Config/: Config.h
Sample/Sample/GWServerParser/: GWServerParser.cpp  GWServerParser.h  GWServerSocket.cpp  GWServerSocket.h
Sample/Sample/db/: DBLogMgr.cpp  DBLogMgr.h  DBManager.cpp  DBManager.h
Sample/Sample/global/: MessageDefine.h
Sample/Sample/timer/: TimerMgr.cpp  TimerMgr.h
Sample/Sample_CallDB/: Resource.h  Sample.cpp  Sample_CallDB.vcxproj  Sample_CallDB.vcxproj.filters  configure  configure.ac  stdafx.h
Sample/Sample_CallDB/Config/: Config.h
Sample/Sample_CallDB/GWServerParser/: GWServerParser.cpp  GWServerParser.h  GWServerSocket.cpp  GWServerSocket.h
Sample/Sample_CallDB/db/: DBManager.cpp  DBManager.h  DBParseTable.h
Sample/Sample_CallDB/global/: ServerDefine.h
Sample/Sample_CallDB/timer/: TimerMgr.cpp
Sample/Sample_DBSvr/: DBSaver.cpp  DBSaver.rc  MYSQLDBSaver.vcxproj  MYSQLDBSaver.vcxproj.filters  Makefile.am  ReadMe.txt  Resource.h  configure.ac  stdafx.cpp  stdafx.h
Sample/Sample_DBSvr/Config/: Config.cpp  Config.h
Sample/Sample_DBSvr/GMSvrParser/: GMSvrDef.h  GMSvrParseTable.h  GMSvrParser.cpp  GMSvrParser.h  GMSvrSocket.cpp  GMSvrSocket.h
Sample/Sample_DBSvr/db/: DBLogMgr.cpp  DBLogMgr.h  DBManager.cpp  DBManager.h
Sample/Sample_DBSvr/dbcache/: DBCache.cpp  DBCache.h
Sample/Sample_DBSvr/global/: Global.h
Sample/Sample_DBSvr/timer/: TimerMgr.cpp  TimerMgr.h
Sample/Sample_Gateway/: Gateway.cpp  Gateway.rc  Gateway.vcxproj  Gateway.vcxproj.filters  Global.h  Makefile.am  ReadMe.txt  configure.ac  stdafx.h
Sample/Sample_Gateway/ClientParser/: ClientDef.h  GameSocket.cpp  GameSocket.h  MsgRetDef.h  PkgParser.cpp  PkgParser.h
Sample/Sample_Gateway/Config/: Config.cpp  Config.h
Sample/Sample_Gateway/ServerParser/: GWMsgDef.h  ServerParser.cpp  ServerParser.h  ServerSocket.cpp  ServerSocket.h
Sample/Sample_Gateway/timer/: TimerMgr.cpp  TimerMgr.h
Sample/Sample_WebSocketSvr/: CMakeLists.txt  Global.h  ReadMe.txt  Resource.h  WSGateway.cpp  WSGateway.h  WSGateway.rc  WSGateway.vcxproj  WSGateway.vcxproj.filters  stdafx.cpp  stdafx.h
Sample/Sample_WebSocketSvr/ClientParser/: GameSocket.cpp  GameSocket.h  PkgParser.cpp  PkgParser.h
Sample/Sample_WebSocketSvr/Config/: Config.cpp  Config.h
Sample/Sample_WebSocketSvr/ServerParser/: ServerParser.cpp  ServerParser.h  ServerSocket.cpp  ServerSocket.h
Sample/Sample_WebSocketSvr/timer/: TimerMgr.cpp  TimerMgr.h
src/: Lib.vcxproj  Lib.vcxproj.filters  Makefile.am  YTSvrLib.h  configure  configure.ac  stdafx.cpp  stdafx.h  typedef.h
src/Base64/: Base64.cpp  Base64.h
src/BugReport/: BugslayerUtil.h  BugslayerUtil.lib  BugslayerUtilMC.h  CrashHandler.h  CriticalSection.h  DiagAssert.h  JButton.h  JImageList.h  JListBox.h  JListView.h  JModalDlg.h  JRegistry.h  JSimpleColl.h  JString.h  JTrayNotification.h  MemDumperValidator.h  MiniDump.h  ResString.h  SuperAssert.h  SymbolEngine.h  VariableInfo.h
src/Filter/: Filter.cpp  Filter.h
src/Global/: GlobalServer.cpp  GlobalServer.h  GlobalURLRequest.cpp  GlobalURLRequest.h  Perfermance.cpp  Perfermance.h  Performance.cpp  Performance.h
src/Service/: Application.cpp  Application.h  AutoCloseFile.cpp  AutoCloseFile.h  Log.cpp  Log.h  PkgParserBase.cpp  PkgParserBase.h  Pool.h  SyncObj.cpp  SyncObj.h  TimerHandler.cpp  TimerHandler.h  TimerThread.cpp  TimerThread.h  Utility.cpp  Utility.h  YTThread.cpp  YTThread.h
src/Single/: Single.h
src/Socket/: MessageQueue.hpp  SendBuffer.cpp  SendBuffer.h  YTSocketBase.cpp  YTSocketBase.h  YTSocketClient.cpp  YTSocketClient.h  YTSocketConnector.cpp  YTSocketConnector.h  YTSocketMutiClient.cpp  YTSocketMutiClient.h  YTSocketMutiClientController.cpp  YTSocketMutiClientController.h  YTSocketServer.cpp  YTSocketThread.cpp  YTSocketThread.h
src/Socket/HTTPSocket/: HTTPSocket.hpp
src/Socket/RUDP/: UDPSocket.cpp  ikcp.cpp
src/Socket/TCPSocket/: TCPSocket.cpp  TCPSocket.h
src/Socket/WebSocket/: WSPkgParser.cpp  WSSendBuffer.cpp  YTWSConnector.cpp  YTWSConnector.h  YTWSServer.cpp  YTWSServer.h
src/XCPTHLR/: ExceptHandler.cpp  ExceptHandler.h
src/asio/asio/: signal_set.hpp
src/dice/: dice.h
src/findpath/: JPS.h
src/iconv/lib/: charset.lib  iconv.lib
src/jsoncpp/: jsoncpp.lib
src/libcurl/: curl.h  libcurl32.lib  libcurl64.lib
src/libevent/: libevent_core.lib  libevent_extras.lib
src/libevent/event2/: event_compat.h
src/libevent/lib/: libevent.lib
src/libwebsockets/include/: libwebsockets.h  lws_config.h
src/libwebsockets/lib/: websockets.exp  websockets.lib  websockets_static.lib
src/linux_debug/: install.sh
src/linux_release/: install.sh
src/lua/: LuaMgr.cpp
src/lua/detail/: LuaRef.h
src/lua/luac/: luac.c
src/lz4/: lz4feasy.cpp  lz4feasy.h
src/md5/: md5.cpp
src/mysql/: MYSQLCommand.cpp  MYSQLCommand.h  MYSQLDBClient.cpp  MYSQLDBSys.cpp  MYSQLDBSys.h  MYSQLManagerBase.cpp  MYSQLManagerBase.h  MYSQLRecordSet.cpp  MYSQLRecordSet.h
src/mysql/include/: my_config.h  mysql++.h  mysqld_ername.h
src/mysql/lib/: libmysql.lib
src/redis/: RedisConnector.cpp  RedisConnector.h  RedisConnectorCommand.cpp  RedisConnectorPool.cpp
src/sha/: sha1.cpp  sha1.h
src/stl/: wqueue.h
src/tinyxml/: XMLDocument.cpp  XMLNode.cpp  XMLNode.h  XMLParser.cpp  XMLParser.h  tinystr.cpp  tinyxml.cpp  tinyxml.h  tinyxml2.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
src/urlwriter/: urlwriter.cpp  urlwriter.h
src/websocketpp/: frame.hpp
src/zlib/: zlibmt_x64.lib  zlibmt_x86.lib
(+252 files in other folders)
